--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -31,13 +31,25 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4d0fd3fe",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "def palindrome(s):\n",
+    "    cleaned = ''.join(c.lower() for c in s if c.isalnum())\n",
+    "    # Check if the cleaned string is equal to its reverse\n",
+    "    return cleaned == cleaned[::-1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,18 +79,42 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "396c9c08",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "def parentheses(s):\n",
+    "    return s.count('(') == s.count(')')"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
