Prep Assignments for Resub after failed autograder

--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -84,17 +84,26 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def parentheses(s):\n",
-    "    return s.count('(') == s.count(')')"
+    "    stack = []\n",
+    "    for char in s:\n",
+    "        if char == '(':\n",
+    "            stack.append(char)\n",
+    "        elif char == ')':\n",
+    "            if not stack:\n",
+    "                return False\n",
+    "            stack.pop()\n",
+    "    return not stack\n",
+    "\n"
    ]
   }
  ],
